// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense Summary rendering:  should render the expense summary correctly with 1 expense 1`] = `
<div>

  <h3>

    Viewing 
    1
     
    expense
     totalling £
    2.35
     
  </h3>
</div>
`;

exports[`Expense Summary rendering:  should render the expense summary correctly with multiple expenses 1`] = `
<div>

  <h3>

    Viewing 
    5
     
    expenses
     totalling £
    30.00
     

  </h3>

</div>
`;

exports[`Expense Summary rendering:  should render the expense summary correctly with no expenses 1`] = `
<div>

  <h3>

    Viewing 
     
    expenses
     totalling £
    0.00
     

  </h3>

</div>
`;
